ucp-synthesizer/tests/snapshots/export_snapshots__ag_ui_events.snap
---
source: ucp-synthesizer/tests/export_snapshots.rs
assertion_line: 38
expression: "&serde_json::from_str::<serde_json::Value>(&content).unwrap()"
---
{
  "events": [
    {
      "component": "Button",
      "event": "click",
      "eventType": "component.click",
      "payload": "AsyncEventHandler([])"
    }
  ],
  "protocol": "ag-ui/v1"
}
