ucp-synthesizer/tests/snapshots/export_snapshots__llms_txt.snap
---
source: ucp-synthesizer/tests/export_snapshots.rs
assertion_line: 54
expression: content
---
# UCP Component Library

## Button

- **Description:** Button component
- **Props:**
  - `disabled` (bool, optional)
- **Events:**
  - `click`
